[package]
name = "log4j"
version = "0.1.0"
edition = "2018"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
description = "Library to log to Java's log4j from Rust"
license = "Apache-2.0 OR MIT"
keywords = ["Java", "JNI", "log4j", "logging"]
categories = ["api-bindings", "development-tools::ffi", "external-ffi-bindigns"]
repository = "https://github.com/Better-Player/log4j-rs"
homepage = "https://github.com/Better-Player/log4j-rs"
readme = "README.md"

[dependencies]
jni = "0.19.0"
thiserror = "1.0.29"

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.2.0"

[dev-dependencies.jni]
version = "0.19.0"
features = ["invocation"]

[dev-dependencies.reqwest]
version = "0.11.4"
default-features = false
features = ["rustls-tls", "blocking"]